added CSS style sheet, experimenting with buttons and styles

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<h1>Kale Harris's Digital Portfolio</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link href="style.css" rel="stylesheet">
+        <title>Kale Harris's Digital Portfolio</title>
+    </head>
+    <body>
+        <h1>Kale Harris's Digital Portfolio</h1>
+        <a href="https://kaleharris.github.io/models">Go to Models</a>
+        <p>Here you'll find examples of my works throughout my career.
+        Below is a video for a quick rundown of all that I accomplished during college.</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-***
-
-<button name="button" onclick="http://www.google.com">Click me</button>
-<p>Here you'll find examples of my works throughout my career.<br>
-Below is a video for a quick rundown of all that I accomplished during college.</p>
-[Click Here](https://kaleharris.github.io/models){: .btn} to take a closer look at some of the models featured in that video.
-<iframe width="560" height="315" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-***
+    </body>
+</html>
