--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
     </head>
     <body>
         <h1>Kale Harris's Digital Portfolio</h1>
-        <a href="https://kaleharris.github.io/models">Go to Models</a>
-        <p>Here you'll find examples of my works throughout my career.
-        Below is a video for a quick rundown of all that I accomplished during college.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+        <div>
+        <ul>
+            <li><a href="https://kaleharris.github.io/models">Models</a></li>
+            <li><a href="https://kaleharris.github.io/media">Media</a></li>
+            <li><a href="https://kaleharris.github.io/about">About</a></li>
+        </ul>
+        </div>
+        <div>
+            <p>Here you'll find examples of my works throughout my career.
+            Below is a video for a quick rundown of all that I accomplished during college.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </body>
 </html>
