set a website wide background image and added navbar to all pages

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <body>
         <h1>Kale Harris's Digital Portfolio</h1>
         <div>
-        <ul>
-            <li><a href="https://kaleharris.github.io/models">Models</a></li>
-            <li><a href="https://kaleharris.github.io/media">Media</a></li>
-            <li><a href="https://kaleharris.github.io/about">About</a></li>
-        </ul>
+            <ul>
+                <li><a href="https://kaleharris.github.io/index">Home</a></li>
+                <li><a href="https://kaleharris.github.io/models">Models</a></li>
+                <li><a href="https://kaleharris.github.io/media">Media</a></li>
+                <li><a href="https://kaleharris.github.io/about">About</a></li>
+            </ul>
         </div>
         <div>
             <p>Here you'll find examples of my works throughout my career.
