--- a/models.html
+++ b/models.html
@@ -3,6 +3,10 @@
 
 <head>
     <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" 
+    rel="stylesheet">
     <title>Kale Harris's Digital Portfolio</title>
 </head>
 <h1>3D Models</h1>
