--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <link href="style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" 
+        rel="stylesheet">
         <title>Kale Harris's Digital Portfolio</title>
     </head>
     <body>
