added a dropdown to the navbar, added 2 new pages and some content to other pages

--- a/models.html
+++ b/models.html
@@ -13,8 +13,14 @@
 <div>
     <ul>
         <li><a href="https://kaleharris.github.io/index">Home</a></li>
-        <li><a href="https://kaleharris.github.io/models">Models</a></li>
-        <li><a href="https://kaleharris.github.io/media">Media</a></li>
+        <li><a class="active" href="https://kaleharris.github.io/models">Models</a></li>
+        <li class="dropdown">
+            <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
+            <div class="dropdown-content">
+                <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
+                <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
+            </div>
+        </li>
         <li><a href="https://kaleharris.github.io/about">About</a></li>
     </ul>
 </div>
