--- a/about.html
+++ b/about.html
@@ -14,9 +14,19 @@
             <ul>
                 <li><a href="https://kaleharris.github.io/index">Home</a></li>
                 <li><a href="https://kaleharris.github.io/models">Models</a></li>
-                <li><a href="https://kaleharris.github.io/media">Media</a></li>
-                <li><a href="https://kaleharris.github.io/about">About</a></li>
+                <li class="dropdown">
+                    <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
+                        <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
+                    </div>
+                </li>
+                <li><a class="active" href="https://kaleharris.github.io/about">About</a></li>
             </ul>
+        </div>
+        <div style="align-self: center;">
+            <h2>About Me</h2>
+            <img style="height: 10%; width: 30%; display: block; align-self: center;" src="images/itsme.png">
         </div>
     </body>
 </html>
