--- a/project-pages/orchestra-wars.html
+++ b/project-pages/orchestra-wars.html
@@ -2,15 +2,14 @@
 <html>
 
 <head>
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>Kale Harris's Digital Portfolio</title>
 </head>
-
 <body>
-    <h1>Kale Harris's Digital Portfolio</h1>
+    <h1>Orchestra Wars</h1>
     <div>
         <ul>
             <li><a class="active" href="https://kaleharris.github.io/index">Home</a></li>
@@ -25,14 +24,5 @@
             <li><a href="https://kaleharris.github.io/about">About</a></li>
         </ul>
     </div>
-    <div>
-        <p>Here you'll find examples of my works throughout my career.
-            Below is a video for a quick rundown of all that I accomplished during college.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-    </div>
 </body>
-
 </html>
