overhauled the look of the site and the navbar, made some fixes to the about page

--- a/about.html
+++ b/about.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" 
-        rel="stylesheet">
-        <title>Kale Harris's Digital Portfolio</title>
-    </head>
-    <body>
+
+<head>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <title>Kale Harris's Digital Portfolio</title>
+</head>
+
+<body>
+    <header>
         <h1>About</h1>
         <div>
             <ul>
@@ -24,9 +26,12 @@
                 <li><a class="active" href="https://kaleharris.github.io/about">About</a></li>
             </ul>
         </div>
-        <div style="align-self: center;">
-            <h2>About Me</h2>
-            <img style="height: 10%; width: 30%; display: block; align-self: center;" src="images/itsme.png">
-        </div>
-    </body>
+    </header>
+    <div>
+        <img style="height: 10%; width: 30%; margin-top: 10px; border: 2px solid black; box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);"
+            src="images/itsme.png">
+        <h2 style="text-align: center;">About Me</h2>
+    </div>
+</body>
+
 </html>
