--- a/models.html
+++ b/models.html
@@ -5,70 +5,74 @@
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" 
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>Kale Harris's Digital Portfolio</title>
 </head>
-<h1>3D Models</h1>
-<div>
-    <ul>
-        <li><a href="https://kaleharris.github.io/index">Home</a></li>
-        <li><a class="active" href="https://kaleharris.github.io/models">Models</a></li>
-        <li class="dropdown">
-            <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
-            <div class="dropdown-content">
-                <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
-                <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
-            </div>
-        </li>
-        <li><a href="https://kaleharris.github.io/about">About</a></li>
-    </ul>
-</div>
 
-<h2>Cello Robot</h2>
-<div class='modelo-wrapper'>
-    <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-        <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
-                src="https://app.modelo.io/embedded/sUl3z3foq3?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                allowfullscreen></iframe> </div>
+<body>
+    <header>
+        <h1>3D Models</h1>
+        <div>
+            <ul>
+                <li><a href="https://kaleharris.github.io/index">Home</a></li>
+                <li><a class="active" href="https://kaleharris.github.io/models">Models</a></li>
+                <li class="dropdown">
+                    <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
+                        <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
+                    </div>
+                </li>
+                <li><a href="https://kaleharris.github.io/about">About</a></li>
+            </ul>
+        </div>
+    </header>
+
+    <h2>Cello Robot</h2>
+    <div class='modelo-wrapper'>
+        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+                    src="https://app.modelo.io/embedded/sUl3z3foq3?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
+                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen></iframe> </div>
+        </div>
     </div>
-</div>
-<h2>Trumpet Robot</h2>
-<div class='modelo-wrapper'>
-    <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-        <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
-                src="https://app.modelo.io/embedded/CIYUZL9u5q?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                allowfullscreen></iframe> </div>
+    <h2>Trumpet Robot</h2>
+    <div class='modelo-wrapper'>
+        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+                    src="https://app.modelo.io/embedded/CIYUZL9u5q?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
+                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen></iframe> </div>
+        </div>
     </div>
-</div>
-<h2>Cello Turret Top</h2>
-<div class='modelo-wrapper'>
-    <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-        <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
-                src="https://app.modelo.io/embedded/NeERZe9_hq?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                allowfullscreen></iframe> </div>
+    <h2>Cello Turret Top</h2>
+    <div class='modelo-wrapper'>
+        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+                    src="https://app.modelo.io/embedded/NeERZe9_hq?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
+                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen></iframe> </div>
+        </div>
     </div>
-</div>
-<h2>Trumpet Turret Top</h2>
-<div class='modelo-wrapper'>
-    <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-        <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
-                src="https://app.modelo.io/embedded/wfKI5LREzD?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                allowfullscreen></iframe> </div>
+    <h2>Trumpet Turret Top</h2>
+    <div class='modelo-wrapper'>
+        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+                    src="https://app.modelo.io/embedded/wfKI5LREzD?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
+                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen></iframe> </div>
+        </div>
     </div>
-</div>
-<h2>Turret Base</h2>
-<div class='modelo-wrapper'>
-    <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-        <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
-                src="https://app.modelo.io/embedded/CngOjpHGdv?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                allowfullscreen></iframe> </div>
+    <h2>Turret Base</h2>
+    <div class='modelo-wrapper'>
+        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+                    src="https://app.modelo.io/embedded/CngOjpHGdv?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
+                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen></iframe> </div>
+        </div>
     </div>
-</div>
+</body>
 
 </html>
