--- a/project-pages/orchestra-wars.html
+++ b/project-pages/orchestra-wars.html
@@ -8,21 +8,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>Kale Harris's Digital Portfolio</title>
 </head>
+
 <body>
-    <h1>Orchestra Wars</h1>
-    <div>
-        <ul>
-            <li><a class="active" href="https://kaleharris.github.io/index">Home</a></li>
-            <li><a href="https://kaleharris.github.io/models">Models</a></li>
-            <li class="dropdown">
-                <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
-                <div class="dropdown-content">
-                    <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
-                    <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
-                </div>
-            </li>
-            <li><a href="https://kaleharris.github.io/about">About</a></li>
-        </ul>
-    </div>
+    <header>
+        <h1>Orchestra Wars</h1>
+        <div>
+            <ul>
+                <li><a class="active" href="https://kaleharris.github.io/index">Home</a></li>
+                <li><a href="https://kaleharris.github.io/models">Models</a></li>
+                <li class="dropdown">
+                    <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
+                        <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
+                    </div>
+                </li>
+                <li><a href="https://kaleharris.github.io/about">About</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
+
 </html>
