--- a/projects.html
+++ b/projects.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link href="style.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" 
-        rel="stylesheet">
-        <title>Kale Harris's Digital Portfolio</title>
-    </head>
-    <body>
+
+<head>
+    <link href="style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+    <title>Kale Harris's Digital Portfolio</title>
+</head>
+
+<body>
+    <header>
         <h1>Projects</h1>
         <div>
             <ul>
@@ -24,5 +26,7 @@
                 <li><a href="https://kaleharris.github.io/about">About</a></li>
             </ul>
         </div>
-    </body>
+    </header>
+</body>
+
 </html>
