--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
 </head>
 
 <body>
-    <h1>Kale Harris's Digital Portfolio</h1>
-    <div>
-        <ul>
-            <li><a class="active" href="https://kaleharris.github.io/index">Home</a></li>
-            <li><a href="https://kaleharris.github.io/models">Models</a></li>
-            <li class="dropdown">
-                <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
-                <div class="dropdown-content">
-                    <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
-                    <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
-                </div>
-            </li>
-            <li><a href="https://kaleharris.github.io/about">About</a></li>
-        </ul>
-    </div>
+    <header>
+        <h1>Kale Harris's Digital Portfolio</h1>
+        <div>
+            <ul>
+                <li><a class="active" href="https://kaleharris.github.io/index">Home</a></li>
+                <li><a href="https://kaleharris.github.io/models">Models</a></li>
+                <li class="dropdown">
+                    <a class="dropbtn" href="https://kaleharris.github.io/projects">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="https://kaleharris.github.io/project-pages/orchestra-wars">Orchestra Wars</a>
+                        <a href="https://kaleharris.github.io/project-pages/slime-hunter">Slime Hunter</a>
+                    </div>
+                </li>
+                <li><a href="https://kaleharris.github.io/about">About</a></li>
+            </ul>
+        </div>
+    </header>
     <div>
         <p>Here you'll find examples of my works throughout my career.
             Below is a video for a quick rundown of all that I accomplished during college.</p>
