fixed the model iframes, nearly finished the home page content

--- a/index.html
+++ b/index.html
@@ -28,9 +28,25 @@
         </div>
     </header>
     <div>
-        <p>Here you'll find examples of my works throughout my career.
-            Below is a video for a quick rundown of all that I accomplished during college.</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player"
+        <h2>Welcome</h2>
+        <p>
+            This site is where you can find examples of my work throughout my career, 
+            such as projects I've worked on, models I've created for said projects,<br>
+            and any other accomplishments I decide to add here in the future.
+        </p>
+        <p>
+            The <a href="https://kaleharris.github.io/models">Models</a> page showcases a few models from my project titled Orchestra Wars.<br>
+            Much more can be found on my Artstation profile, which you can find through this link:
+        </p>
+        <p> 
+            The <a href="https://kaleharris.github.io/projects">Projects</a> page features an overview of the major projects I've completed or taken part of.<br>
+            If you hover over its button in the navbar, a dropdown will appear with buttons for each individual project.
+        </p>
+        <p>
+            The <a href="https://kaleharris.github.io/about">About</a> page contains information about me. Go there if you're curious to learn more about me as a person.
+        </p>
+        <p>Below is a video I made in my senior year of college showcasing the major works I completed as a student.</p>
+        <iframe width="720" height="405" src="https://www.youtube.com/embed/_RWRr83VsrQ" title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
