--- a/models.html
+++ b/models.html
@@ -30,47 +30,62 @@
 
     <h2>Cello Robot</h2>
     <div class='modelo-wrapper'>
-        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+        <div style="width: 100%; padding-bottom: 25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+                <iframe
                     src="https://app.modelo.io/embedded/sUl3z3foq3?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                    allowfullscreen></iframe> </div>
+                    frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
     <h2>Trumpet Robot</h2>
     <div class='modelo-wrapper'>
-        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+        <div style="width: 100%; padding-bottom: 25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+                <iframe
                     src="https://app.modelo.io/embedded/CIYUZL9u5q?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                    allowfullscreen></iframe> </div>
+                    frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
     <h2>Cello Turret Top</h2>
     <div class='modelo-wrapper'>
-        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+        <div style="width: 100%; padding-bottom: 25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+                <iframe
                     src="https://app.modelo.io/embedded/NeERZe9_hq?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                    allowfullscreen></iframe> </div>
+                    frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
     <h2>Trumpet Turret Top</h2>
     <div class='modelo-wrapper'>
-        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+        <div style="width: 100%; padding-bottom: 25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+                <iframe
                     src="https://app.modelo.io/embedded/wfKI5LREzD?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                    allowfullscreen></iframe> </div>
+                    frameborder="0" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
     <h2>Turret Base</h2>
     <div class='modelo-wrapper'>
-        <div style="width: 100%; padding-bottom: 56.25%; position: relative">
-            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;"> <iframe
+        <div style="width: 100%; padding-bottom: 25%; position: relative">
+            <div style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
+                <iframe
                     src="https://app.modelo.io/embedded/CngOjpHGdv?viewport=false&autoplay=false&autoRotate=false&hideTools=false&showBIM=false&showBBoxSize=false&showKooRender=false"
-                    style="width:100%;height:100%;" frameborder="0" mozallowfullscreen webkitallowfullscreen
-                    allowfullscreen></iframe> </div>
+                    frameborder="" mozallowfullscreen webkitallowfullscreen
+                    allowfullscreen>
+                </iframe>
+            </div>
         </div>
     </div>
 </body>
