more styling fixes, finished home page, added content on the project page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <link href="style.css" rel="stylesheet">
@@ -36,7 +36,7 @@
         </p>
         <p>
             The <a href="https://kaleharris.github.io/models">Models</a> page showcases a few models from my project titled Orchestra Wars.<br>
-            Much more can be found on my Artstation profile, which you can find through this link:
+            Much more can be found on my Artstation profile, which you can find through this link: https://www.artstation.com/kaleharris/collections
         </p>
         <p> 
             The <a href="https://kaleharris.github.io/projects">Projects</a> page features an overview of the major projects I've completed or taken part of.<br>
