--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <link href="style.css" rel="stylesheet">
@@ -27,6 +27,22 @@
             </ul>
         </div>
     </header>
+    <div class="row">
+        <div class="column left">&nbsp;</div>
+        <div class="column middle">
+            <h2>Overview</h2>
+            <p>
+                This page is a simple overview of major projects I've completed or been a part of.
+                Also included here are projects that either were too small to make an individual web page about or that
+                for one reason or another I could not provide much media to showcase them properly.
+                If you'd like an in-detail showcase for a project, hover over the Projects button in the navbar above
+                and a list of them will appear.
+            </p>
+            <h3>Orchestra Wars</h3>
+            <p></p>
+        </div>
+        <div class="column right">&nbsp;</div>
+    </div>
 </body>
 
 </html>
