--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 
 <head>
     <link href="style.css" rel="stylesheet">
@@ -31,6 +31,9 @@
         <img style="height: 10%; width: 30%; margin-top: 10px; border: 2px solid black; box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.3);"
             src="images/itsme.png">
         <h2 style="text-align: center;">About Me</h2>
+        <p>
+
+        </p>
     </div>
 </body>
 
