added content to project pages

--- a/project-pages/orchestra-wars.html
+++ b/project-pages/orchestra-wars.html
@@ -27,6 +27,40 @@
             </ul>
         </div>
     </header>
+    <div class="row">
+        <div class="column left">&nbsp;</div>
+        <div class="column middle">
+            <h2>Summary</h2>
+            <p>
+                Orchestra Wars is a virtual reality game I created as one of my final projects for college.
+                A game like this was a project assigned to all students about halfway through the GIMM major.
+                Its main purpose was to simulate as best as possible the process behind developing a game
+                while also putting students' personal time management skills to the test. Aside from a couple
+                courses that were taught in tandem with the project, students had to develop the game on their
+                own time while other courses took place normally. As such, it took place over a couple years
+                and was due as a final project just before graduation. This project is something I may continue
+                to improve in the future.<br>
+                The game itself can best be described as a mix between tower defense and beat 'em up style. The
+                player is tasked with defending a scroll containing sheet music against invading red enemies. At the 
+                same time, the player has blue allies attempting to steal the red team's scroll. The player
+                can spawn turrets and use a violin they are given as weapons to defend against the red team.
+                My hope was to address a common criticism of tower defense games; the player's lack of personal
+                involvement. That is to say, some find it boring to have an overhead view of the game and only
+                watch as their towers do all the fighting for them. To resolve this, the player is down in the 
+                action as well - almost literally thanks to VR.
+            </p>
+            <h2>Conceptualization</h2>
+            <p>
+                Development began with the creation of a Game Design Document (GDD) for the game. The course this was
+                introduced in also served as a guide on how GDDs should be structured and written. At the time, multiplayer
+                was a required functionality for the project. Due to how new GIMM is as a major, the 1st cohort (aka the first people to ever take the major at my college)
+                were still discovering just how finnicky multiplayer can be to develop in Unity, and it wouldn't be until a
+                year later that the multiplayer requirement was dropped. Regardless, my initial plans for the game were
+                built around that and some remnants of it are still present in the game today.
+            </p>
+        </div>
+        <div class="column right">&nbsp;</div>
+    </div>
 </body>
 
 </html>
