--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,24 @@
                 and a list of them will appear.
             </p>
             <h3>Orchestra Wars</h3>
-            <p></p>
+            <img src="images/orchestrascene.png" style="width: 50%; height: 30%;">
+            <p>
+                This is a VR game I created in the Unity engine as one of my final projects in college.
+                The purpose of it was to more or less simulate the actual process behind developing a game,
+                so it takes place over a couple years as students progress through the major. It was also
+                a test of my time management skills, as I had to develop it in my own time while other courses
+                took place normally. Much more info in the navbar dropdown.
+            </p>
+            <h3>Slime Hunter</h3>
+            <img src="images/slimehunterscene.png" style="width: 50%; height: 30%;">
+            <p>
+                Another VR game made during my time in college. However, this one was a group project between
+                myself and 3 other students. This project was unique in the way it was developed. As part of the 
+                curriculum for the course we were in, each student would switch roles after about a month. The
+                original plan was for us to make a new project each month, but with our professor's permission, we
+                decided to instead keep developing the same project while still switching roles in our team. Slime
+                Hunter is a result of this process. More details on this in the navbar.
+            </p>
         </div>
         <div class="column right">&nbsp;</div>
     </div>
