more changes to orchestra wars page

--- a/project-pages/orchestra-wars.html
+++ b/project-pages/orchestra-wars.html
@@ -41,40 +41,57 @@
                 and was due as a final project just before graduation. This project is something I may continue
                 to improve in the future.<br>
                 The game itself can best be described as a mix between tower defense and beat 'em up style. The
-                player is tasked with defending a scroll containing sheet music against invading red enemies. At the 
+                player is tasked with defending a scroll containing sheet music against invading red enemies. At the
                 same time, the player has blue allies attempting to steal the red team's scroll. The player
                 can spawn turrets and use a violin they are given as weapons to defend against the red team.
                 My hope was to address a common criticism of tower defense games; the player's lack of personal
                 involvement. That is to say, some find it boring to have an overhead view of the game and only
-                watch as their towers do all the fighting for them. To resolve this, the player is down in the 
+                watch as their towers do all the fighting for them. To resolve this, the player is down in the
                 action as well - almost literally thanks to VR.
             </p>
-            <!--Video of Gameplay Here-->
+            <iframe width="720" height="405" src="https://www.youtube.com/embed/c3RVlXU8yy0"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
             <h2>Conceptualization</h2>
             <p>
                 Development began with the creation of a Game Design Document (GDD) for the game. The course this was
-                introduced in also served as a guide on how GDDs should be structured and written. At the time, multiplayer
-                was a required functionality for the project. Due to how new GIMM is as a major, the 1st cohort (aka the first people to ever take the major at my college)
-                were still discovering just how finnicky multiplayer can be to develop in Unity, and it wouldn't be until a
+                introduced in also served as a guide on how GDDs should be structured and written. At the time,
+                multiplayer
+                was a required functionality for the project. Due to how new GIMM is as a major, the 1st cohort (aka the
+                first people to ever take the major at my college)
+                were still discovering just how finnicky multiplayer can be to develop in Unity, and it wouldn't be
+                until a
                 year later that the multiplayer requirement was dropped. Regardless, my initial plans for the game were
                 built around that and some remnants of it are still present in the game today.<br>
                 Initially, the plan was to have two teams duke it out in a strictly player versus player only mode. I
-                pulled a lot of inspiration from the game Team Fortress 2; there would be a few different playable character
-                classes each with their own weaponry and unique abilities based on their musical instruments, and various objectives to compete for. This system
-                was later cut after hearing how much of a nightmare VR multiplayer was to create in Unity at the time, and
-                the multiplayer requirement was dropped from the curriculum. Below are a couple images from the GDD of this early concept.
+                pulled a lot of inspiration from the game Team Fortress 2; there would be a few different playable
+                character
+                classes each with their own weaponry and unique abilities based on their musical instruments, and
+                various objectives to compete for. This system
+                was later cut after hearing how much of a nightmare VR multiplayer was to create in Unity at the time,
+                and
+                the multiplayer requirement was dropped from the curriculum. Below are a couple images from the GDD of
+                this early concept.
             </p>
             <img style="margin-bottom: 10px;" src="../images/orchestra-wars/orchestradiagram.png">
             <img style="margin-bottom: 10px;" src="../images/orchestra-wars/orchestralevel.png">
             <h2>Finalized Mechanics</h2>
             <p>
-                Not long after the multiplayer cut, I created the tower defense/beat 'em up hybrid we have today. The structure
-                of the level supports up to two players, as I still want to try making a versus mode in the future. For now, 
-                the game features a red team and a blue team. The player is always on the blue team, which is also represented as
-                the string family of orchestral instruments. The player is given a violin to grab as a weapon and a console with
-                which to spawn a couple of what I call MegaCello Turrets. The NPCs, meanwhile, are following set paths in an 
-                attempt to reach the opposing side of the map. The way I have it structured, if the player does an adequate job
-                defending, they will eventually win. However, without the turrets, they can become overwhelmed very quickly.
+                Not long after the multiplayer cut, I created the tower defense/beat 'em up hybrid we have today. The
+                structure
+                of the level supports up to two players, as I still want to try making a versus mode in the future. For
+                now,
+                the game features a red team and a blue team. The player is always on the blue team, which is also
+                represented as
+                the string family of orchestral instruments. The player is given a violin to grab as a weapon and a
+                console with
+                which to spawn a couple of what I call MegaCello Turrets. The NPCs, meanwhile, are following set paths
+                in an
+                attempt to reach the opposing side of the map. The way I have it structured, if the player does an
+                adequate job
+                defending, they will eventually win. However, without the turrets, they can become overwhelmed very
+                quickly.
                 See the video below for a more detailed explanation of the game's inner works.
             </p>
             <!--Informational Video Here-->
