--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,9 @@
                 and a list of them will appear.
             </p>
             <h3>Orchestra Wars</h3>
-            <img src="images/orchestrascene.png" style="width: 50%; height: 30%;">
+            <a href="https://kaleharris.github.io/project-pages/orchestra-wars">
+                <img src="images/orchestrascene.png" style="width: 50%; height: 30%;">
+            </a>
             <p>
                 This is a VR game I created in the Unity engine as one of my final projects in college.
                 The purpose of it was to more or less simulate the actual process behind developing a game,
@@ -48,7 +50,9 @@
                 took place normally. Much more info in the navbar dropdown.
             </p>
             <h3>Slime Hunter</h3>
-            <img src="images/slimehunterscene.png" style="width: 50%; height: 30%;">
+            <a href="https://kaleharris.github.io/project-pages/slime-hunter">
+                <img src="images/slimehunterscene.png" style="width: 50%; height: 30%;">
+            </a>
             <p>
                 Another VR game made during my time in college. However, this one was a group project between
                 myself and 3 other students. This project was unique in the way it was developed. As part of the 
